# waterfront-docs

./: .aider.chat.history.md  .aider.input.history  .gitignore  APP Booking - PWA Layout Spec.md  ESP32-README.md  Functional Specification Document (FSD).md  README.md  STYLE_GUIDE.md  TSD.md  map.md  test-aider-github.txt  }
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.github/workflows/: ci.yml  esp32-ci.yml
docs/: ESP32 Firmware Test Checklist.md  FSD.md  Functional Specification Document (FSD).md  MQTT_SPEC.md  PWA-Layout-Spec.md  Project Plan - Waterfront ESP32 MQTT Code Development.md  Project Plan for Adapting Nodestarkmdb-esp32-cashless for Waterfront ESP32 MQTT Code Development.md  REST-MQTT-Architecture.md  TSD.md  Technical Specification Document (TSD).md
src/: main.cpp  mqtt_base.cpp  nimble.cpp  webui_server.h  wifi_manager.cpp  wifi_manager.h
supabase-local/migrations/: 002_extend_schema.sql
waterfront-backend/: index.js
waterfront-esp32/: CMakeLists.txt  Doxyfile  Readme_ESP32.md  SYSTEM_SPEC.md  ToDo ESP32 Firmware.md  platformio.ini  sdkconfig.old
waterfront-esp32/data/: config.json
waterfront-esp32/docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  ESP32 Firmware Test Checklist.md  ESP32 Pinout Plan and Diagram.md  ESP32-Readme.md  MQTT_SPEC.md  SYSTEM_SPEC.md  TROUBLESHOOTING.md
waterfront-esp32/main/: CMakeLists.txt  compartment_manager.h  config.h  config_loader.h  lte_manager.cpp  lte_manager.h  main.cpp  mqtt_client 3.cpp  mqtt_client.h  nimble.h  offline_fallback.cpp  ota_handler.cpp  provisioning.cpp  relay_handler.cpp
waterfront-esp32/src/: compartment_manager.cpp  config.h  config_loader.cpp  config_loader.h  deposit_logic.cpp  deposit_logic.h  error_handler.cpp  error_handler.h  gate_control.cpp  gate_control.h  logger.cpp  lte_manager.cpp  lte_manager.h  main.cpp  mqtt_base.cpp  mqtt_client.cpp  mqtt_client.h  mqtt_handler.cpp  mqtt_handler.h  mqtt_topics.h  nimble.cpp  nimble.h  power_manager.cpp  power_manager.h  provisioning.cpp  provisioning.h  return_sensor.cpp  return_sensor.h  test_mqtt_handler.cpp  webui_server.cpp  wifi_manager.cpp  wifi_manager.h
waterfront-esp32/test/: test_compartment_manager.cpp  test_config_loader.cpp  test_deposit_logic.cpp  test_error_handler.cpp  test_gate_control.cpp  test_integration.cpp  test_lte_manager.cpp  test_main.cpp  test_mqtt_client.cpp  test_mqtt_handler.cpp  (+2 more)
waterfront-infra/: docker-compose.yml  mosquitto.conf
waterfront-web/: create-table.sql  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js  tailwind.config.ts
(+49 files in other folders)
